# xll-gen

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  TUTORIAL.md  Taskfile.yml  count_lines.py  go.mod  go.sum  main.go  readme.md  test_final.txt  test_full.txt  test_output.txt  test_output_2.txt  test_xll.ps1  tools.go  xll.yaml
.Jules/: bugtracker.md  palette.md  proposal.md
.jules/: bolt.md  bugtracker.md  palette.md  proposal.md
LICENSES/: BSD-3-Clause.txt
cmd/: assets.go  bug_repro_mem_test.go  bug_repro_test.go  build.go  compile_gate_test.go  cpp_compile_gate_bounce_test.go  cpp_compile_gate_cache_test.go  cpp_compile_gate_date_test.go  cpp_compile_gate_rtd_date_test.go  cpp_compile_gate_test.go  doctor.go  doctor_gate_test.go  doctor_version_test.go  generate.go  generate_string_test.go  generate_test.go  init.go  init_test.go  protocol_fbs_sync_test.go  regression_helpers_test.go  regression_static_test.go  regression_test.go  regtest.go  repro_async_test.go  repro_nested_ipc_test.go  repro_rtd_timeout_test.go  repro_string_opt_test.go  repro_string_optional_test.go  repro_zstd_config_test.go  root.go  simulate.go  smoke_test.go  ui.go  version.go  zero_function_gate_test.go
cmd/assets/: DirectHost.h  IPCHost.h  IPCProtocol.h  IPCUtils.h  ObjectPool.h  Platform.h
debug/: debug.go  noop.go
docs/: ribbon-e2e.md  vscode_debugging.md
excel/: context.go  doc.go  excel.go  excel_windows.go  range.go  range_test.go  syscall_windows.go
experiments/: README.md
experiments/d_string_probe/: Taskfile.yml  go.mod  go.sum  main.go  xll.yaml
experiments/go-embed/: CMakeLists.txt  README.md  main.go
experiments/go-embed/bin2c/: bin2c.go
experiments/go-embed/cpp/: main.cpp
experiments/probe_d_string/: CMakeLists.txt  README.md  XLCALL.CPP  probe_d_string.cpp  test1.csv  test1.xlsx
experiments/probe_pointer_args/: CMakeLists.txt  README.md  XLCALL.CPP  probe_pointer_args.cpp  test.ps1  test1.csv  test1.xlsx
internal/assets/: assets.go  assets_test.go
internal/config/: config.go  config_test.go  excel_names.go  load.go  load_test.go
internal/fbany/: fbany.go  fbany_test.go  grid_test.go
internal/flatc/: flatc.go
internal/generator/: dependencies.go  dependencies_test.go  flatc.go  funcmap.go  funcmap_test.go  gen_any_test.go  gen_async_grid_test.go  gen_cache_key_test.go  gen_calcend_defer_test.go  gen_cancel_quit_test.go  gen_close_ghost_test.go  gen_command_test.go  gen_common.go  gen_cpp.go  gen_cpp_safe_block_test.go  gen_cpp_test.go  gen_date_test.go  gen_escape_precision_test.go  gen_event_test.go  gen_go.go  gen_grid_test.go  gen_parent_watch_test.go  gen_ribbon_bounce_test.go  gen_ribbon_connect_test.go  gen_rtd_composite_test.go  gen_rtd_connect_test.go  gen_rtd_date_test.go  gen_rtd_notify_window_test.go  gen_rtd_once_test.go  gen_rtd_terminate_gate_test.go  gen_schema.go  gen_taskfile_test.go  gen_wiring_test.go  generator.go  golden_test.go  types.go  utils.go
internal/platform/: platform.go  platform_other.go  platform_windows.go  security_addins_test.go
internal/regtest/: assets.go  generator.go  prepare.go  runner.go
internal/regtest/testdata/: CMakeLists.txt  mock_host.cpp  server.go  xll.yaml
internal/ribbon/: ribbon.go  ribbon_test.go
internal/rtdtest/: rtd_test.go
internal/smoketest/: assets.go  build.go  date_format_test.go  excel.go  smoketest.go  spill_rtdonce_test.go
internal/templates/: CMakeLists.txt.tmpl  Taskfile.yml.tmpl  gitignore.tmpl  interface.go.tmpl  launch.json.tmpl  main.go.tmpl  protocol.fbs  regtest_CMakeLists.txt.tmpl  regtest_main.cpp.tmpl  schema.fbs.tmpl  server.go.tmpl  sim_CMakeLists.txt.tmpl  templates.go  xll.yaml.tmpl  xll_main.cpp.tmpl  xltypes.fbs.tmpl
internal/ui/: ui.go  ui_test.go
internal/versions/: versions.go
pkg/algo/: greedy_mesh.go  greedy_mesh_test.go
pkg/chunk/: chunk.go  chunk_test.go
pkg/generator/: flatc.go  generator.go
pkg/log/: logger.go  logger_test.go
pkg/msgid/: msgid.go  msgid_test.go
pkg/pool/: builder.go
pkg/protocol/: Ack.go  Any.go  AnyValue.go  AsyncHandle.go  AsyncResult.go  BatchAsyncResponse.go  BatchRtdUpdate.go  Bool.go  CalculationEndedResponse.go  Chunk.go  Command.go  CommandWrapper.go  Err.go  FormatCommand.go  Grid.go  Int.go  Nil.go  Num.go  NumGrid.go  Range.go  Rect.go  RefCache.go  RtdConnectRequest.go  RtdConnectResponse.go  RtdDisconnectRequest.go  RtdUpdate.go  Scalar.go  ScalarValue.go  SetCommand.go  SetRefCacheRequest.go  Str.go  XlError.go  doc.go  protocol.fbs
pkg/rtd/: manager.go  manager_cancel_test.go  manager_test.go  runonce.go  runonce_test.go
pkg/server/: async_batcher.go  batcher.go  batcher_test.go  bootstrap.go  builder.go  chunk_budget_test.go  cloning.go  command_batcher.go  command_batcher_test.go  command_flush.go  converters.go  converters_test.go  handlers.go  handlers_command_test.go  handlers_rtd_test.go  manager.go  manager_test.go  protocol.go  protocol_helpers.go  refarg.go  refarg_test.go  refcache.go  refcache_test.go  rtd.go  rtd_dispatch.go  types.go
pkg/templates/: Taskfile.yml.tmpl  gitignore.tmpl  interface.go.tmpl  schema.fbs.tmpl  templates.go  xll.yaml.tmpl  xltypes.fbs.tmpl
pkg/transferid/: transferid.go
pkg/xldate/: xldate.go  xldate_test.go
scripts/: count_lines.py  test_xll.ps1
version/: version.go
xloper/: any.go  any_test.go  asynchandle.go  asynchandle_test.go  core.go  doc.go  errors.go  errval.go  multi.go  multi_test.go  nil.go  number.go  number_test.go  ref.go  ref_test.go  string.go  string_test.go  wtf8.go
(+123 files in other folders)
